Added edit and delete feature

--- a/food-oracle/src/main.css
+++ b/food-oracle/src/main.css
@@ -298,7 +298,7 @@ p {
     justify-content: space-around;
     align-items: center;
     height: 10%;
-    width: 50%;
+    width: 50vw;
     padding: 5px;
     margin: 5px;
     border-radius: 7px;
@@ -353,7 +353,7 @@ p {
 
 .cal-macros-box {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
 }
@@ -366,10 +366,10 @@ p {
 
 .name-quantity-box {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 5px;
-    width: 90%;
+    padding: 5px 0 5px 5px;
+    width: 100%;
 }
 
 .name-quantity-box input {
